feat: organize subscriptions by category
